# flutter_ffi_test

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/x86/: libfunc.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: fa_golang.podspec  file_access_through_golang.podspec
ios/Classes/: fa_golang.c  file_access_through_golang.c
ios/go_library.xcframework/: Info.plist
ios/go_library.xcframework/ios-arm64_x86_64-simulator/: Headers
ios/libfunc.xcframework/: Info.plist
lib/: fa_golang.dart  fa_golang_bindings_generated.dart  file_access_through_golang.dart  file_access_through_golang_bindings_generated.dart
linux/: CMakeLists.txt
macos/: file_access_through_golang.podspec
macos/Classes/: file_access_through_golang.c
src/: CMakeLists.txt  Makefile  func.go  go.mod  go_interface.go  go_library.h  libsum.go  libsum.h
src/C/: CMakeLists.txt  file_access_through_golang.c
src/pems/: test.txt
windows/: CMakeLists.txt
(+3 files in other folders)
